k8s/monitoring/jaeger/jaeger-agent.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: jaeger-agent
  namespace: monitoring
  labels:
    app: jaeger
    jaeger-infra: agent-daemonset
spec:
  selector:
    matchLabels:
      app: jaeger-agent
  template:
    metadata:
      labels:
        app: jaeger-agent
        jaeger-infra: agent-instance
    spec:
      hostNetwork: true     # NOTE: Agent is configured to have same IP as the host/node
      dnsPolicy: ClusterFirstWithHostNet
      containers:
      - name: agent-instance
        image: jaegertracing/jaeger-agent:1.22.0
        # env:
        # - name: REPORTER_HTTP_HOST_PORT
        #   value: jaeger-collector.monitoring:14268"
        command:
          - "/go/bin/agent-linux"
          - "--reporter.grpc.host-port=jaeger-collector.monitoring:14250"
          # - "--help"
          # - "--collector.host-port=http://jaeger-collector.monitoring:14267"
          - "--processor.jaeger-compact.server-queue-size=2000"
          # - "--discovery.conn-check-timeout=1s"
        ports:
        - containerPort: 5775
          protocol: UDP
        - containerPort: 6831
          protocol: UDP
          hostPort: 6831
        - containerPort: 6832
          protocol: UDP
        - containerPort: 5778
          protocol: TCP
        resources:
          requests:
            memory: 200M
            cpu: 200m
          limits:
            memory: 200M
            cpu: 200m
