k8s/monitoring/jaeger/jaeger-query.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jaeger-query
  namespace: monitoring
  labels:
    app: jaeger-query
    jaeger-infra: query-deployment
spec:
  selector:
    matchLabels:
      app: jaeger-query
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: jaeger-query
        jaeger-infra: jaeger-query
    spec:
      containers:
      - image: jaegertracing/jaeger-query:1.22.0
        name: jaeger-query
        args: ["--config-file=/conf/query.yaml", "--query.base-path=/jaeger", "--log-level=debug"]
        # args: ["--query.base-path=/jaeger", "--log-level=debug"]
        ports:
        - containerPort: 16686
          protocol: TCP
        readinessProbe:
          httpGet:
            path: "/"
            port: 16687
        volumeMounts:
        - name: jaeger-configuration-volume
          mountPath: /conf
        resources:
          requests:
            memory: 100M
            cpu: 100m
          limits:
            memory: 100M
            cpu: 100m
      volumes:
        - configMap:
            name: jaeger-configuration
            items:
              - key: query
                path: query.yaml
          name: jaeger-configuration-volume
---
apiVersion: v1
kind: Service
metadata:
  name: jaeger-query
  namespace: monitoring
  labels:
    app: jaeger-query
    jaeger-infra: jaeger-query
spec:
  ports:
  - name: jaeger-query
    port: 16686
    targetPort: 16686
  selector:
    jaeger-infra: jaeger-query
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: jaeger-ui
 namespace: monitoring
 annotations:
   kubernetes.io/ingress.class: nginx # or nginx or whatever ingress controller
spec:
  rules:
  - http:
      paths:
        - path: /jaeger
          pathType: Prefix
          backend:
            service:
              name: jaeger-query
              port: 
                number: 16686 

#  - host: '*' # your jaeger internal endpoint
